frontend/src/style.css
/* background color for page */
html {
  background: linear-gradient(180DEG, #e6ba5c,#6fdfe3);
  height: 350%;
}


/* search button */
 .btn {
  position: absolute;
  background-color: transparent;
  border-color: white;
  border: solid white;
  color: white;
  font-family: 'Alegreya Sans', sans-serif;
  text-align:center;
  cursor:pointer;
  font-size: 130%;
  padding: 0.5%;
  padding-left: 3%;
  padding-right: 3%;
  border-radius: 5vh 5vh 5vh 5vh;
  outline: none;
}

/* search button on hover */
.btn:hover{
  background-color: white;
  outline: none;
  color: black;
  box-shadow: 0px 5px 10px grey;
  -ms-transform: scale(1.1); /* IE 9 */
  transform: scale(1.0); 
}

/* search bar styling */
.round {
  border-radius: 5vh 5vh 5vh 5vh; 
  border: solid white;
  background-color:white;
  width: 50%;
  height: 50px;
  padding-left: 3%;
  padding-right: 3%;
  outline: none;
}

/* Home elements centered on page */
p {
  display: flex;
  justify-content: center;
  padding-top: 1%;
}


/* title styling */
#title {
  font-family: 'Alegreya Sans', sans-serif; 
  font-size: 370%;
  color: #498f91;
  background-color: white;
  width: 55%;
  padding-top: 4%;
  border-radius: 2vh 7vh 2vh 7vh;
  /* rectangle background styling */
  padding-bottom: 4%;
  padding-left: 7%;
  padding-right: 3%;
  /* center title on page */
  margin-right: auto;
  margin-left: 16%;
}

/* moves elements to vertical-center of page */
body {
  padding-top: 9%;
}

/* example search text */
::placeholder {
  font-size: 120%;
  font-family: 'Alegreya Sans', sans-serif;
}

/* text entered in search bar */
input[type="text"] {
  font-size: 120%;
  font-family: 'Alegreya Sans', sans-serif;
}

/* hidden rectangle that appears after search */
.playerElement {
  width: 50%;
  display: flex;
  justify-content: center;
  background-color: white;
  margin-top: 14%;
  margin-right: 5%;
  padding-top: 3%;
  padding-bottom: 2%;
  border-radius: 3vh 3vh 3vh 3vh;
  margin-left: 25%;
  flex-flow: column
}

/* Player Names after search styling */
.playName {
  margin-right: 15%;
  margin-left: 15%;
  font-size: 250%;
  padding-left: 19%;
  font-family: 'Alegreya Sans', sans-serif;
}

/* styling for drop-down stats */
.dropdownMenuTitle {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 145%;
  padding-left: 33%;
}

/* styling for most important stats in results section */
.baseStats {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 135%;
}

/* styling for drop-down menu */
.dropdownMenu {
  font-family: 'Alegreya Sans', sans-serif;
  font-size: 135%;
  cursor: pointer;
}

/* styling for detailed statistics within dropdown menu */
.dropdownMenuStats {
	/* Default invisible */
	display: none;
}

/* Mark an element as visible */
.show {
	display: block;
}

